--- a/assets/style.css
+++ b/assets/style.css
@@ -1,16 +1,186 @@
 
+/* Base Styles
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* NOTE
+html is set to 62.5% so that all the REM measurements throughout Skeleton
+are based on 10px sizing. So basically 1.5rem = 15px :) */
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+  line-height: 1.6;
+  font-weight: 400;
+  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: rgb(50, 50, 50); }
+
+
+/* Typography
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 300; }
+h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; }
+h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem;}
+h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
+h4 { font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
+h5 { font-size: 2.2rem; line-height: 1.5;  letter-spacing: -.05rem; margin-bottom: 0.6rem; margin-top: 0.6rem;}
+h6 { font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}
+
+p {
+  margin-top: 0; }
+
+
+
+/* Links
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+a {
+  color: #1EAEDB;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+a:hover {
+  color: #0FA0CE;
+}
+
+
+/* Buttons
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.button,
+button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  color: #555;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box; }
+.button:hover,
+button:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="button"]:hover,
+.button:focus,
+button:focus,
+input[type="submit"]:focus,
+input[type="reset"]:focus,
+input[type="button"]:focus {
+  color: #333;
+  border-color: #888;
+  outline: 0; }
+.button.button-primary,
+button.button-primary,
+input[type="submit"].button-primary,
+input[type="reset"].button-primary,
+input[type="button"].button-primary {
+  color: #FFF;
+  background-color: #33C3F0;
+  border-color: #33C3F0; }
+.button.button-primary:hover,
+button.button-primary:hover,
+input[type="submit"].button-primary:hover,
+input[type="reset"].button-primary:hover,
+input[type="button"].button-primary:hover,
+.button.button-primary:focus,
+button.button-primary:focus,
+input[type="submit"].button-primary:focus,
+input[type="reset"].button-primary:focus,
+input[type="button"].button-primary:focus {
+  color: #FFF;
+  background-color: #1EAEDB;
+  border-color: #1EAEDB; }
+
+
+/* Spacing
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+button, .button {
+  margin-bottom: 0rem;
+}
+input, textarea, select, fieldset {
+  margin-bottom: 0rem;
+}
+pre,dl,figure,table,form {
+  margin-bottom: 0rem;
+}
+p, ul, ol {
+  margin-bottom: 0.75rem;
+}
+
+
+/* Misc
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+hr {
+  margin-top: 3rem;
+  margin-bottom: 3.5rem;
+  border-width: 0;
+  border-top: 1px solid #E1E1E1;
+}
+
+
+
+/*
+--    --    --    --    --    --    --    --    --    --    --    --    --    --    --    --    --    --
+
+--    --    --    --    --    --    --    --    --    --    --    --    --    --    --    --    --    --
+*/
+
+
+/* Main Section
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .header{
+  background-color: grey;
+  padding: 2.5%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+
+.main-body{
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+
+
+/* The Headline
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.header .headline{
   text-align: center;
   color:orange;
-  font-size: 5rem;
+  font-size: 5.5rem;
 }
 
-.description{
+.header .description{
   text-align: left;
-  color:black;
-  font-size: 1.5rem;
+  color:white;
 }
 
+.description-emphasis{
+  text-align: left;
+  color:orange;
+}
+
+/* The Components
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .header-row{
   display: block;
   flex-direction: row;
@@ -18,11 +188,12 @@
   margin-right: 5%;
 }
 
-
+/* https://www.w3schools.com/css/css3_multiple_columns.asp */
 .three-columns{
-  display: flex;
-  flex-direction: row;
+  column-count: 3;
+  column-gap: 5%;
+  column-rule-style: solid;
+  text-align: center;
   margin-left: 5%;
   margin-right: 5%;
-  text-align: center;
 }
