--- a/assets/style.css
+++ b/assets/style.css
@@ -205,3 +205,39 @@ hr {
   margin-left: 5%;
   margin-right: 5%;
 }
+
+
+/* Special Buttons
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.reset-button{
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  color: orange;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 36px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 40px;
+  border: 2px solid orange;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+.reset-button:hover{
+  display: inline-block;
+  color: white;
+  background-color: orange;
+  border-color: white;
+}
+.reset-button:focus{
+  display: inline-block;
+  color: #FFF;
+  background-color: darkorange;
+  border-color: white;
+}
